--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1 class="color-change">ruby</h1>
+    <h1 class="color-change">ruby</h1>
+    <h1 class="color-change">ruby</h1>
+    <h1 class="color-change">ruby</h1>
+    <h1 class="color-change">ruby</h1>
     
 </body>
 </html>
